<resources>
    <string name="app_name">Nice grape</string>
    <string name="intro_description">칭찬 포도알스티커를 적립해주세요</string>
    <string name="intro_welcome">\u0020네 착한 포도나무</string>
    <string name="intro_enter"> 놀러가기 </string>
    <string name="main_purpose"> 나이키 신발 </string>
    <string name="setting_title">\u0020설 정 </string>
    <string name="grape_title"> 스티커판 제목 설정 </string>
    <string name="grape_calender"> 포도알 캘린더  </string>
    <string name="grape_pw"> 비밀번호 설정  </string>
    <string name="open_license"> 오픈소스 라이선스  </string>
    <string name="left_arrow"><![CDATA[<]]></string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="user_name">누구의 포도나무 인가요?</string>
    <string name="naming">이름을 입력하세요</string>
    <string name="grape_name">포도의 이름이 무엇인가요~?</string>
    <string name="cancel">취 소</string>
    <string name="confirm">확 인</string>
    <string name="add_grape">칭찬 포도를 추가하세요!</string>
    <string name="num_grape">포도알 갯수를 정해주세요!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_not_locked_text">Nothing should happen on this page, here for test purpose</string>
    <string name="activity_dialog_title">Forgot you Pincode?</string>
    <string name="activity_dialog_accept">OK</string>
    <string name="activity_dialog_decline">CANCEL</string>
    <string name="activity_dialog_content">Tap \'OK\' to log out, when you log back in you\'ll be able to create a new Pincode.\n\nIf you remember your Pincode, tap \'Cancel\' to go back.</string>
    <string name="activity_appcompat_message">I am a PinCompatActivity!</string>
    <string name="grape_title_change">포도나무를 삭제할까요?</string>

</resources>
