<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_line"
    android:dividerPadding="2.5dp"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/back_button"
            android:onClick="onClickBackMain"/>

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/setting_title"
            android:textSize="25dp" />

    </LinearLayout>


    <TextView
        android:id="@+id/grape_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grape_title"
        android:textSize="25dp"
        android:paddingLeft="20dp"
        android:onClick="onClickGrapeTitle"/>

    <TextView
        android:id="@+id/grape_calender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grape_calender"
        android:textSize="25dp"
        android:paddingLeft="20dp"
        android:onClick="onClickGrapeCalendar"/>

    <TextView
        android:id="@+id/grape_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grape_pw"
        android:textSize="25dp"
        android:paddingLeft="20dp" />

    <TextView
        android:id="@+id/open_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_license"
        android:paddingLeft="20dp"
        android:textSize="25dp"
        android:onClick="onClickOpenLicense"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
