<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intro_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_description"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/intro_description"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/welcome_string">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/name_color"
            android:textSize="25dp"
            android:id="@+id/username"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_welcome"
            android:layout_toRightOf="@id/username"
            android:textSize="25dp"/>


    </RelativeLayout>


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/grape_20"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:id="@+id/welcome_grape"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/intro_enter"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:onClick="onClickEnterButton"
        android:background="@color/intro_enter"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-2815505421993509/1990159701"/>



</RelativeLayout>