<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/main_purpose_txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_centerInParent="true"
            android:text="@string/main_purpose"/>
    </RelativeLayout>

    <Button
        android:layout_alignParentRight="true"
        android:text="="
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:onClick="onClickSettingButton"
        android:id="@+id/main_menu"
        />

    <TextView
        android:id="@+id/left_arrow"
        android:onClick="onClickArrow"
        android:text="@string/left_arrow"
        android:textSize="80dp"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/right_arrow"
        android:onClick="onClickArrow"
        android:text="@string/right_arrow"
        android:textSize="80dp"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="400dp" />
    // 센터 표현하는거 추가 고민 필요


    <com.rd.PageIndicatorView
        android:id="@+id/page_indicator"
        android:layout_above="@id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_centerInParent="true"
        app:piv_animationType="scale"
        app:piv_dynamicCount="true"
        app:piv_interactiveAnimation="true"
        app:piv_selectedColor="@android:color/holo_red_light"
        app:piv_unselectedColor="@android:color/darker_gray"
        app:piv_viewPager="@id/view_pager"
        attrs:piv_padding="12dp"
        attrs:piv_radius="8dp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/add_grape_1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:id="@+id/add_grape_1"/>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/add_grape"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:onClick="onClickAddGrape"
        android:id="@+id/add_grape"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>

</RelativeLayout>